[package]
name = "open_llm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
llm-chain-llama = "0.8.2"
llm-chain-openai = "0.8.2"
llm-chain = "0.8.2"
tokio = { version = "1.27.0", features = ["macros", "rt","rt-multi-thread"] }
futures = "0.3.20"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0.160"
serde_json = "1.0.96"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt","rt-multi-thread"] }
